--- a/sections/references.bib
+++ b/sections/references.bib
@@ -121,3 +121,24 @@ url="https://doi.org/10.1007/978-3-319-08509-8_11"
   url = 	 {http://proceedings.mlr.press/v15/glorot11a.html},
   abstract = 	 {While logistic sigmoid neurons are more biologically plausible than hyperbolic tangent neurons, the latter work better for training multi-layer neural networks. This paper shows that rectifying neurons are an even better model of biological neurons and yield equal or better performance than hyperbolic tangent networks in spite of the hard non-linearity and non-differentiability at zero, creating sparse representations with true zeros which seem remarkably suitable for naturally sparse data. Even though they can take advantage of semi-supervised setups with extra-unlabeled data, deep rectifier networks can reach their best performance without requiring any unsupervised pre-training on purely supervised tasks with large labeled datasets. Hence, these results can be seen as a new milestone in the attempts at understanding the difficulty in training deep but purely supervised neural networks, and closing the performance gap between neural networks learnt with and without unsupervised pre-training. [pdf]}
 }
+
+@misc{1412.6572,
+Author = {Ian J. Goodfellow and Jonathon Shlens and Christian Szegedy},
+Title = {Explaining and Harnessing Adversarial Examples},
+Year = {2014},
+Eprint = {arXiv:1412.6572},
+}
+
+@misc{1312.6199,
+Author = {Christian Szegedy and Wojciech Zaremba and Ilya Sutskever and Joan Bruna and Dumitru Erhan and Ian Goodfellow and Rob Fergus},
+Title = {Intriguing properties of neural networks},
+Year = {2013},
+Eprint = {arXiv:1312.6199},
+}
+
+@misc{1406.2661,
+Author = {Ian J. Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
+Title = {Generative Adversarial Networks},
+Year = {2014},
+Eprint = {arXiv:1406.2661},
+}
