modifiche sezione Progetto e bibliografia

--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 % set the encoding used by your editor here (default is utf8)
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{tikz}
 
 % math packages
 \usepackage{amsmath}
