--- a/sections/references.bib
+++ b/sections/references.bib
@@ -142,3 +142,43 @@ Title = {Generative Adversarial Networks},
 Year = {2014},
 Eprint = {arXiv:1406.2661},
 }
+
+@misc{1508.06615,
+Author = {Yoon Kim and Yacine Jernite and David Sontag and Alexander M. Rush},
+Title = {Character-Aware Neural Language Models},
+Year = {2015},
+Eprint = {arXiv:1508.06615},
+}
+
+@article{MAL-006,
+url = {http://dx.doi.org/10.1561/2200000006},
+year = {2009},
+volume = {2},
+journal = {Foundations and Trends® in Machine Learning},
+title = {Learning Deep Architectures for AI},
+doi = {10.1561/2200000006},
+issn = {1935-8237},
+number = {1},
+pages = {1-127},
+author = {Yoshua Bengio}
+}
+
+@article{Liou:2008:MWP:1411851.1412074,
+ author = {Liou, Cheng-Yuan and Huang, Jau-Chi and Yang, Wen-Chie},
+ title = {Modeling Word Perception Using the Elman Network},
+ journal = {Neurocomput.},
+ issue_date = {October, 2008},
+ volume = {71},
+ number = {16-18},
+ month = oct,
+ year = {2008},
+ issn = {0925-2312},
+ pages = {3150--3157},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1016/j.neucom.2008.04.030},
+ doi = {10.1016/j.neucom.2008.04.030},
+ acmid = {1412074},
+ publisher = {Elsevier Science Publishers B. V.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {Authorship, Categorization, Compositional representation, Content addressable memory, Elman network, Linguistic analysis, Personalized code, Polysemous word, Semantic search, Stylistic similarity, Word perception},
+} 
